--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tiptap/extension-code-block": "^2.9.3",
-    "@tiptap/extension-collaboration": "^3.15.3",
+    "@tiptap/extension-collaboration": "^2.27.2",
     "@tiptap/extension-collaboration-cursor": "^2.26.2",
     "@tiptap/extension-color": "^2.9.3",
     "@tiptap/extension-highlight": "^2.9.3",
@@ -60,6 +60,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
+    "recharts": "^3.6.0",
     "tailwind-merge": "^2.5.5",
     "y-webrtc": "^10.3.0",
     "y-websocket": "^2.0.4",
